part2/2_02/manifests/deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-svc-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-svc
  template:
    metadata:
      labels:
        app: project-svc
    spec:
      volumes:
      - name: img-data
        persistentVolumeClaim:
          claimName: local-claim
      containers:
        - name: service-container
          image: robsondepaula/project-service:2_02
          volumeMounts: 
          - name: img-data
            mountPath: /data
