part2/2_02/manifests/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  type: ClusterIP
  selector:
    app: project-svc
  ports:
    - name: http
      protocol: TCP
      port: 2346
      targetPort: 3001
