part2/2_02/manifests/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  type: ClusterIP
  selector:
    app: project-app
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 80 # react app served by nginx
